<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".ui.MainActivity">

    <item android:id="@+id/menu_toggle_log"
          app:showAsAction="ifRoom"
          android:title="@string/toggle_log" />

    <item
        android:id="@+id/action_fill_provider"
        android:orderInCategory="100"
        android:title="@string/fill_provider"/>

    <item
        android:id="@+id/action_read_provider"
        android:orderInCategory="100"
        android:title="@string/load_from_provider"/>


    <item
        android:id="@+id/action_delete_provider"
        android:orderInCategory="100"
        android:title="@string/delete_provider"/>
    <item android:id="@+id/menu_toggle_offline"
          app:showAsAction="never"
          android:title="@string/online" />
</menu>
